--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+@use './colours';
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Kumbh Sans', sans-serif;
+}
+
+html{
+    font-size: 16px;
+}
+
+body{
+    width: 100%;
+    line-height: 1.4;
+    text-rendering: optimizeSpeed;
+    min-height: 100vh;
+    background-color: colours.$background;
+}
