Move container styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,4 +20,44 @@ body{
     text-rendering: optimizeSpeed;
     min-height: 100vh;
     background-color: colours.$background;
+    overflow-x: hidden ;
 }
+
+
+$container-sm: 540px;
+$container-md: 740px;
+$container-lg: 960px;
+$container-xlg: 1140px;
+$container-xxlg: 1300px;
+
+.attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+
+
+    .container {
+        max-width: 91%;
+        padding: 2rem 2rem 1.2rem 1rem;
+        margin-block-start: 2.3rem;
+        margin-inline: auto;
+        background-color: white;
+      
+        @media screen and (min-width: 576px) {
+          width: $container-sm !important;
+        }
+      
+        @media screen and (min-width: 768px) {
+          width: $container-md !important;
+        }
+      
+        @media screen and (min-width: 992px) {
+          width: $container-lg !important;
+        }
+      
+        @media screen and (min-width: 1200px) {
+          width: $container-xlg !important;
+         }
+      
+        @media screen and (min-width: 1400px) {
+          width: $container-xxlg !important;
+         }
+      }
