--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -3,6 +3,43 @@
 .menu-container {
   img {
     cursor: pointer;
+    //width: 19px;
+    //height: 19px;
+  }
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  .avatar {
+    width: 22px;
+    height: 22px;
+    border-radius: 50%
+  }
+
+
+  .avatar:hover{
+    outline: 2px solid colours.$primary-orange;
+  }
+
+  .cart-avatar-wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+  }
+
+  .brand {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 0.5rem;
+
+    h1 {
+      //margin-bottom: 0;
+      padding-bottom: 6px;
+      font-weight: 700;
+    }
   }
 }
 
@@ -26,6 +63,12 @@
   z-index: 99;
   padding-left: 20px;
 
+  animation-name: slidein;
+  animation-duration: 0.9s;
+ // animation-timing-function: linear;
+  //animation-timing-function: ease-in;
+  display: block;
+
   img {
     padding-top: 1rem;
     padding-bottom: 2rem;
@@ -36,5 +79,36 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+
+    .close-button:hover {
+      filter: brightness(0) saturate(75%);
+    }
+    nav > ul {
+      list-style-type: none;
+      li {
+        margin-block: 1rem;
+        font-size: 1.2rem;
+        font-weight: 700;
+        a:link,
+        a:visited {
+          text-decoration: none;
+          color: colours.$vdark-blue;
+        }
+
+        a:hover {
+          text-decoration: underline;
+          color: colours.$dark-grayish-blue;
+        }
+      }
+    }
+  }
+}
+
+@keyframes slidein {
+  0% {
+    translate: -500px 0;
+  }
+  100% {
+    translate: 0 0;
   }
 }
