Added mobile carousel

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,1 +1,8 @@
-<p>carousel works!</p>
+<div class="main">
+<img class="product" [src]="productImages[0]" alt="sneakers" #main_img/>
+
+<button class="btn btn-backward" (click)="onBackwards()">
+</button>
+<button class="btn btn-forward" (click)="onForwards()">
+</button>
+</div>
