--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,3 +1,19 @@
+@use 'src/colours';
+
 .product-details > *{
     margin-block: 1rem;
+}
+
+.container{
+    margin-block-start: 0;
+    padding-block-start: 0;
+    padding-inline-end: 1rem;
+}
+
+.producer{
+    letter-spacing: 3px;
+    font-size: .8rem;
+    color:colours.$primary-orange;
+    font-weight: 700;
+    text-transform: uppercase;
 }
