--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use "./colours";
 
-@use './colours';
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Kumbh Sans', sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
-html{
-    font-size: 16px;
+html {
+  font-size: 16px;
+
+  @media screen and (min-width: 1000px){
+    height: 100%;
+    
+  }
 }
 
-body{
-    width: 100%;
-    line-height: 1.4;
-    text-rendering: optimizeSpeed;
-    min-height: 100vh;
-    background-color: colours.$background;
-    overflow-x: hidden ;
+body {
+  width: 100%;
+  line-height: 1.4;
+  text-rendering: optimizeSpeed;
+  height: 100%;
+  min-height: 100vh;
+  background-color: colours.$background;
+  overflow-x: hidden;
 }
-
 
 $container-sm: 540px;
 $container-md: 740px;
@@ -30,34 +34,38 @@ $container-lg: 960px;
 $container-xlg: 1140px;
 $container-xxlg: 1300px;
 
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
+.container {
+  max-width: 91%;
+  padding: 2rem 2rem 1.2rem 1rem;
+  margin-block-start: 2.3rem;
+  margin-inline: auto;
+  background-color: white;
 
-    .container {
-        max-width: 91%;
-        padding: 2rem 2rem 1.2rem 1rem;
-        margin-block-start: 2.3rem;
-        margin-inline: auto;
-        background-color: white;
-      
-        @media screen and (min-width: 576px) {
-          width: $container-sm !important;
-        }
-      
-        @media screen and (min-width: 768px) {
-          width: $container-md !important;
-        }
-      
-        @media screen and (min-width: 992px) {
-          width: $container-lg !important;
-        }
-      
-        @media screen and (min-width: 1200px) {
-          width: $container-xlg !important;
-         }
-      
-        @media screen and (min-width: 1400px) {
-          width: $container-xxlg !important;
-         }
-      }
+  @media screen and (min-width: 576px) {
+    width: $container-sm !important;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: $container-md !important;
+  }
+
+  @media screen and (min-width: 992px) {
+    width: $container-lg !important;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: $container-xlg !important;
+  }
+
+  //@media screen and (min-width: 1400px) {
+  ////  width: $container-xxlg !important;
+  //}
+}
