--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
+<app-header></app-header>
+
 <main>
-  <app-header></app-header>
-  <app-product></app-product>
+  <app-product class="d-flex"></app-product>
 
   <div class="attribution">
     Challenge by
