--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,20 +1,28 @@
-@use 'src/colours';
+@use "src/colours";
 
+.main {
+  position: relative;
+  width: 100%;
 
-.main{
-
-    position: relative;
+  .product {
+    object-fit: cover;
+    height: 300px;
     width: 100%;
-    
 
-    .product{
-        object-fit: cover;
-        height: 300px;
-        width: 100%;
+
+    @media screen and (min-width: 576px) {
+      height: 27.625rem;
+      
     }
+    @media screen and (min-width: 1000px) {
+        border-radius: 10px;
+        height: 27.625rem;
+        width: 27.625rem;
+      }
+  }
 
 
-   .btn{
+  .btn {
     appearance: none;
     border: none;
     //padding: 1rem;
@@ -22,44 +30,66 @@
     padding: 1.5rem;
     background-color: white;
     cursor: pointer;
-    
+  }
 
-   }
-
-   .btn-backward:hover, .btn-forward:hover{
+  .btn-backward:hover,
+  .btn-forward:hover {
     //Add orange on hover
     //filter: brightness(0) saturate(100%) invert(57%) sepia(94%) saturate(2313%) hue-rotate(346deg) brightness(102%) contrast(105%);
-   }
+  }
 
-   .btn-forward{
+  .btn-forward {
     position: absolute;
     top: 50%;
     right: 0;
     translate: 0 -50%;
 
-    background-image: url('/assets/images/icon-next.svg');
+    background-image: url("/assets/images/icon-next.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 10px 15px;
     //@at-root{
-     //@debug   width: 15px;
-     //   height: 15px;
-   // }
-   }
+    //@debug   width: 15px;
+    //   height: 15px;
+    // }
 
-   .btn-backward{
+    @media screen and (min-width: 1000px) {
+        display: none;
+        
+    }
+  }
+
+  .btn-backward {
     position: absolute;
     top: 50%;
     left: 0;
     translate: 0 -50%;
 
-    background-image: url('/assets/images/icon-previous.svg');
+    background-image: url("/assets/images/icon-previous.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 10px 15px;
+
+
+    @media screen and (min-width: 1000px) {
+        display: none;
+        
+    }
     //img{
-       // width: 15px;
-        //height: 15px;
+    // width: 15px;
+    //height: 15px;
     //}
-   }
+  }
+
+
+  //TO-DO
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    z-index: 100;
+  }
 }
