--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@use 'src/colours';
+
 .container-fluid {
   width: 100%;
 // background-color: transparent;
@@ -14,6 +16,12 @@
   margin-block-start: 0;
   background-color: transparent;
   padding: 1rem 1rem;
+
+  @media screen and (min-width: 1000px) {
+    border-bottom: .5px solid colours.$dark-grayish-blue;
+    padding: 0;
+  }
+
  }
 
 }
