--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,6 @@
 <div class="cart">
   <img [src]="'../assets/images/icon-cart.svg'" alt="cart" />
-  <span class="cart-items-no">{{ cart.length }}</span>
+  <span *ngIf="cart.length > 0" class="cart-items-no">{{ cart.length }}</span>
 </div>
 
 <div *ngIf="toggledCart" class="checkout-container">
