--- a/src/app/components/price/price.component.scss
+++ b/src/app/components/price/price.component.scss
@@ -32,7 +32,6 @@
   @media screen and (min-width: 1000px) {
     width: 40%;
   }
- 
 
   .hover:hover {
     filter: brightness(0) saturate(100%) invert(56%) sepia(99%) saturate(294%)
@@ -45,6 +44,7 @@
 }
 
 .add-to-cart {
+  width: 100%;
   border: none;
   cursor: pointer;
   display: flex;
@@ -60,7 +60,6 @@
 
   @media screen and (min-width: 1000px) {
     width: 58%;
-    
   }
 
   p {
@@ -77,20 +76,20 @@
   }
 }
 
-.add-to-cart:disabled{
-    background-color: hsl(20, 100%, 70%);
+.add-to-cart:disabled {
+  background-color: hsl(20, 100%, 70%);
 }
 
 .prices {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  margin-block: 1.1rem;
   @media screen and (min-width: 1000px) {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: .5rem;
+    gap: 0.5rem;
   }
 
   .reduced {
@@ -98,12 +97,11 @@
   }
 }
 
-.wrapper{
-  @media screen and (min-width: 1000px){
+.wrapper {
+  @media screen and (min-width: 1000px) {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
-    
   }
 }
