--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -9,18 +9,15 @@
     height: 300px;
     width: 100%;
 
-
     @media screen and (min-width: 576px) {
       height: 27.625rem;
-      
     }
     @media screen and (min-width: 1000px) {
-        border-radius: 10px;
-        height: 27.625rem;
-        width: 27.625rem;
-      }
+      border-radius: 10px;
+      height: 27.625rem;
+      width: 27.625rem;
+    }
   }
-
 
   .btn {
     appearance: none;
@@ -54,8 +51,7 @@
     // }
 
     @media screen and (min-width: 1000px) {
-        display: none;
-        
+      display: none;
     }
   }
 
@@ -70,17 +66,14 @@
     background-repeat: no-repeat;
     background-size: 10px 15px;
 
-
     @media screen and (min-width: 1000px) {
-        display: none;
-        
+      display: none;
     }
     //img{
     // width: 15px;
     //height: 15px;
     //}
   }
-
 
   //TO-DO
   .overlay {
@@ -92,4 +85,66 @@
     background-color: red;
     z-index: 100;
   }
+
+  .carousel-wrapper {
+    @media screen and (min-width: 1000px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      row-gap: 2rem;
+    }
+
+    .carousel-thumbnails {
+      display: none;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+        cursor: pointer;
+        position: relative;
+      }
+
+      img:hover{
+        opacity: .5;
+      }
+
+
+  
+
+      @media screen and (min-width: 1000px) {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+
+      .thumbnail-wrapper{
+        width: 90px;
+        height: 90px;
+      }
+
+      .outlined{
+        border-radius: 8px;
+        outline: 3px solid colours.$primary-orange;
+
+        img{
+          opacity: .3;
+        }
+       // opacity: .3;
+      }
+    }
+  }
+
+
+  .zoomed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
+    
+  }
+
+ 
 }
