Changed src binding to index

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -2,7 +2,7 @@
   <div class="carousel-wrapper">
     <img
       class="product"
-      [src]="productImages[0]"
+      [src]="productImages[currentIndex]"
       alt="sneakers"
       #main_img
       (click)="onZoomOut()"
