--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,12 @@
 <main>
   <app-product class="d-flex"></app-product>
 
+  <app-lightbox [hidden]="zoomed === false"></app-lightbox>
+
   <div class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+    <a href="https://www.frontendmentor.io/challenges/" target="_blank"
       >Frontend Mentor</a
-    >. Coded by <a href="#">Your Name Here</a>.
+    >. Coded by <a href="https://github.com/KorniDoS" target="_blank">KorniDoS</a>.
   </div>
 </main>
